<resources>
    <string name="app_name" translatable="false">Walhalla</string>
    <string name="msg_token_fmt" translatable="false">fbm</string>
    <string name="yes">Ja</string>
    <string name="later">Später</string>
    <string name="ok">OK</string>
    <string name="of">des</string>
    <string name="clock">Uhr</string>
    <string name="no">Nein</string>
    <string name="send">Senden</string>
    <string name="abort">Abbrechen</string>
    <string name="abort_sure">Wirklich abbrechen?</string>
    <string name="ws">Wintersemester</string>
    <string name="ss">Sommersemester</string>
    <string name="image_description">Bildbeschreibung</string>
    <string name="description">Beschreibung</string>
    <string name="exit_app_via_back">Nochmaliges Tippen beendet die App.</string>
    <string name="attention">Achtung</string>
    <string name="error_title">Fehler</string>
    <string name="error_email_not_verified_message">Die E-Mail Adresse ist noch nicht bestätigt. Soll eine erneute Mail verschickt werden?</string>
    <string name="error_display">Anzeige Fehlgeschlagen</string>
    <string name="error_site_messages">Diese Seite ist nicht vorhanden.</string>
    <string name="error_close_app">Ein unerwarteter Fehler ist aufgetreten.</string>
    <string name="error_upload">Beim hochladen ist etwas schief gelaufen. Bitte später erneut probieren.</string>
    <string name="error_delete_event">Veranstaltung konnte nicht gelöscht werden. Später erneut probieren.</string>
    <string name="error_semester_not_exist">Etwas ist schief gelaufen. Das gewählt Semester existiert nicht.</string>
    <string name="error_fill_all_fields">Es müssen alle Felder ausgefüllt werden.</string>
    <string name="error_login_password_insecure">Das Passwort muss mindestens ein Großbuchstaben, einen Kleinbuchstaben und eine Zahl beinhalten.</string>
    <string name="error_login_password_length">Das Password muss mindestens 8 Zeichen lang sein.</string>
    <string name="error_login_password_not_same">Die Passwörter stimmen nicht überein.</string>
    <string name="msg_unsubscribed">Abmeldung gespeichert</string>
    <string name="msg_unsubscribe_failed">Abmeldung fehlgeschlagen</string>
    <string name="msg_subscribe_failed">Speichern fehlgeschlagen</string>
    <string name="msg_subscribed">Erfolgreich gespeichert</string>
    <string name="login_email">E-Mail</string>
    <string name="login_create">Account erstellen</string>
    <string name="login_welcome_back_title">Willkommen zurück!</string>
    <string name="login_welcome_back_content">Gib dein Passwort ein, um dich einzuloggen.</string>
    <string name="login_sign_up">Registrieren</string>
    <string name="login_sign_up_layout_auth_select_text">Diese E-Mail-Adresse ist bereits in der Kartei vorhanden. Bitte wähle deinen Namen aus und kontrolliere im Anschluss, ob alle Daten noch korrekt sind.</string>
    <string name="login_success">Login erfolgreich</string>
    <string name="login_logout_successful">Erfolgreich Abgemeldet</string>
    <string name="login_loading">Laden…</string>
    <string name="login_forgot_password">Passwort vergessen? Klicke hier!</string>
    <string name="login_empty">Nutzername/Passwort leer</string>
    <string name="login_username">Nutzername</string>
    <string name="login_password">Passwort</string>
    <string name="login_sign_in">Login</string>
    <string name="login_cancel">Abbrechen</string>
    <string name="close">Schließen</string>
    <string name="login_password_control">Erneut das Passwort eingeben</string>
    <string name="login_error">Diese kombination aus Nutzername und Passwort ist nicht bekannt.</string>
    <string name="profile_mobile">Handynummer</string>
    <string name="profile_address_city">Stadt</string>
    <string name="profile_address_zip">PLZ</string>
    <string name="profile_address_number">Nr</string>
    <string name="profile_address_street">Straße</string>
    <string name="profile_lastName">Nachname</string>
    <string name="profile_first_name">Vorname</string>
    <string name="login_set_password">Passwort setzen</string>
    <string name="login_set_contact_data">Kontaktdaten</string>
    <string name="login_set_frat_data">Daten für die Verbindung</string>
    <string name="profile_pob">Herkunftsort</string>
    <string name="profile_description_program_data">Für eine schöne Darstellung im Semesterprogramm sind folgende Daten benötigt:</string>
    <string name="profile_dob">Geburtstag</string>
    <string name="profile_in_loco">Bist du am Ort?</string>
    <string name="profile_first_fraternity">Ist das dein Erstbund?</string>
    <string name="profile_joined">Beitrittssemester</string>
    <string name="profile_choose_rank">Wähle deinen Rang aus</string>
    <string name="profile_name">Name</string>
    <string name="email_invalid">Dies ist keine gültige E-Mail-Adresse.</string>
    <string name="profile_full_member">Bist du ein Bursch?</string>
    <string name="login_image">Profilbild</string>
    <string name="login_image_head">Klicke auf das Feld unten, um dein Profilbild zu verändern. Dies ist nicht für die Print-Version. Es wird nur im internen Bereich der App und Website verwendet.</string>
    <string name="month_jan">Januar</string>
    <string name="month_feb">Februar</string>
    <string name="month_mar">März</string>
    <string name="month_apr">April</string>
    <string name="month_may">Mai</string>
    <string name="month_jun">Juni</string>
    <string name="month_jul">Juli</string>
    <string name="month_aug">August</string>
    <string name="month_sep">September</string>
    <string name="month_oct">Oktober</string>
    <string name="month_nov">November</string>
    <string name="month_dec">Dezember</string>
    <string name="program">Programm</string>
    <string name="program_time_at">um</string>
    <string name="dialog_semester_change">Angezeigtes Semester ändern</string>
    <string name="change_semester">Semester ändern</string>
    <string name="program_dialog_title">Neuen Programmpunkt hinzufügen</string>
    <string name="program_dialog_date">Datum auswählen</string>
    <string name="program_dialog_time">Zeit auswählen</string>
    <string name="program_dialog_end">Für die Abrechnung</string>
    <string name="program_dialog_addition">Zusatz</string>
    <string name="program_dialog_before">Zuschuss vorher</string>
    <string name="program_dialog_after">Maximale Bezuschussung hinterher</string>
    <string name="program_change_saved">Änderungen gespeichert</string>
    <string name="program_save_calendar_complete">Der Eintrag wurde im Kalender gespeichert</string>
    <string name="program_dialog_delete_successful">Veranstaltung erfolgreich gelöscht.</string>
    <string name="program_add">Neue Veranstaltung</string>
    <string name="program_add_new">Neu</string>
    <string name="program_edit">Bearbeiten</string>
    <string name="program_save_in_calendar">In Kalender speichern</string>
    <string name="program_delete_title">Diese Veranstaltung löschen?</string>
    <string name="program_button_given_tasks">Verteilte Aufgaben:</string>
    <string name="program_button_give_tasks">Aufgaben verteilen</string>
    <string name="program_name_place">Name des Ortes</string>
    <string name="program_new_saved">Event erstellt.</string>
    <string name="program_details">Details</string>
    <string name="program_total">ganztägig</string>
    <string name="program_later">anschl.</string>
    <string name="program_dialog_acc_nothing" translatable="false">€ 0,00</string>
    <string name="program_dialog_time_begin">Veranstaltungsbeginn</string>
    <string name="program_dialog_time_end">Veranstaltungsende</string>
    <string name="program_dialog_accounting">Für die Kassenplanung</string>
    <string name="program_dialog_current">Aktuelle Ausgaben bei dieser Veranstaltung:</string>
    <string name="program_dialog_meeting">Ist der Eintrag ein Konvent?</string>
    <string name="program_dialog_place">Die Veranstaltung beginnt adh?</string>
    <string name="program_dialog_semester">Semesterzugehörigkeit</string>
    <string name="program_title">Veranstaltungstitel</string>
    <string name="program_description">Zusatz zur Veranstaltung</string>
    <string name="link_geocode" translatable="false">https://maps.googleapis.com/maps/api/geocode/json</string>
    <string name="messages_open_dialog">Hinzufügen</string>
    <string name="messages_new_head">Neue Mitteilung</string>
    <string name="messages_dialog_title">Neue Mitteilung hinzufügen</string>
    <string name="messages_dialog_first">Titel</string>
    <string name="messages_dialog_second">Inhalt</string>
    <string name="charge_x">Senior</string>
    <string name="charge_vx">Consenior</string>
    <string name="charge_fm">Fuxmajor</string>
    <string name="charge_xx">Schriftführer</string>
    <string name="charge_xxx">Kassier</string>
    <string name="dialog_chargen_title">Ein neues Chargenkabinett hinzufügen</string>
    <string name="dialog_chargen_edit">Chargen bearbeiten</string>
    <string name="charge_from">aus </string>
    <string name="chargen_add">Neue Charge auswählen</string>
    <string name="charge_x_active">Aktivensenior</string>
    <string name="charge_x_ah">Philistersenior</string>
    <string name="footer_helper">Die IBAN wird beim anklicken in die Zwischenablage kopiert.</string>
    <string name="footer_sub_1_title">Konto der Aktivitas</string>
    <string name="footer_sub_2_title" translatable="false">Hausbauverein Walhalla e.V.</string>
    <string name="footer_sub_3_title" translatable="false">K.St.V. Walhalla</string>
    <string name="footer_sub_4_title">Spendenkonto Hausbau</string>
    <string name="footer_copy_aktivenkonto">Aktivenkonto kopiert</string>
    <string name="footer_copy_hbvkonto">Konto des Hausbauvereins kopiert</string>
    <string name="footer_copy_kstvkonto">Konto des K.St.V. Walhalla kopiert</string>
    <string name="footer_copy_hbvdonatekonto">Das Spendenkonto des Hausbauvereins kopiert</string>
    <string name="navigation_drawer_open" translatable="false">Open Navigation Drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close Navigation Drawer</string>
    <string name="menu_drinks">Getränke</string>
    <string name="menu_home">Start</string>
    <string name="menu_chat">Chat</string>
    <string name="menu_contacts">Kartei</string>
    <string name="menu_donation">Spenden</string>
    <string name="menu_login">Login</string>
    <string name="menu_settings">Einstellungen</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_register">Registrieren</string>
    <string name="menu_program">Semesterprogramm</string>
    <string name="menu_chargen">Vorstand der Aktivitas</string>
    <string name="menu_chargen_phil">Philistervorstand</string>
    <string name="menu_user">Nutzer</string>
    <string name="menu_boobies_event">Damenveranstaltung</string>
    <string name="menu_fuxenstunde">Fuxenstunde</string>
    <string name="menu_transcript">Protokoll</string>
    <string name="menu_beer_invoice">Bierabrechnung</string>
    <string name="menu_messages">Neuigkeiten</string>
    <string name="menu_chargen_bottom">Vorstand</string>
    <string name="menu_share">Social Media</string>
    <string name="menu_program_short">Programm</string>
    <string name="frat_name" translatable="false">K.St.V. Walhalla im KV zu Würzburg</string>
    <string name="frat_address" translatable="false">Mergentheimer Straße 32</string>
    <string name="frat_city" translatable="false">97082 Würzburg</string>
    <string name="draft">Entwurf</string>
    <string name="internal">Intern</string>
    <string name="string_public">Öffentlich</string>
    <string name="next">Weiter</string>
    <string name="back">Zurück</string>
    <string name="menu_payment">Einzahlung</string>
    <string name="send_reminder">Zahlungserinnerung</string>
    <string name="menu_drink_fine">Strafe</string>
</resources>