<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_home"
        android:checkable="false"
        android:checked="true"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />

    <item
        android:id="@+id/menu_program"
        android:checkable="false"
        android:checked="true"
        android:icon="@drawable/ic_calendar"
        android:title="@string/menu_program_short" />

    <item
        android:id="@+id/menu_board"
        android:checkable="false"
        android:checked="true"
        android:icon="@drawable/ic_group_line"
        android:title="@string/menu_chargen_bottom" />

    <item
        android:id="@+id/menu_messages"
        android:checkable="false"
        android:checked="true"
        android:icon="@drawable/ic_message"
        android:title="@string/menu_messages" />

    <item
        android:id="@+id/menu_share"
        android:checkable="false"
        android:checked="true"
        android:icon="@drawable/ic_share"
        android:title="@string/menu_share" />

</menu>