<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_send_reminder"
        android:icon="@drawable/ic_baseline_announcement_24"
        android:iconTint="@color/background"
        android:title="@string/send_reminder"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_drink_invoice"
        android:title="@string/menu_beer_invoice"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_payment"
        android:title="@string/menu_payment"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_drink_fine"
        android:title="@string/menu_drink_fine"
        app:showAsAction="never" />

</menu>