<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_sign_in_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:visibility="visible">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/image_description"
        android:padding="16dp"
        android:src="@drawable/wappen_round" />

    <TextView
        style="@style/Custom.Title"
        android:gravity="center"
        android:text="@string/login_welcome_back_title" />

    <TextView
        style="@style/Custom.Subtitle"
        android:gravity="center"
        android:paddingBottom="15sp"
        android:text="@string/login_welcome_back_content" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/background">

        <EditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingBottom="10sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/login_sign_in_back"
            style="@style/Custom.Button"
            android:layout_width="wrap_content"
            android:text="@string/back" />

        <Button
            android:id="@+id/login_sign_in"
            style="@style/Custom.Button"
            android:layout_width="wrap_content"
            android:layout_alignEnd="@id/login_sign_in_back"
            android:layout_alignParentEnd="true"
            android:layout_gravity="end"
            android:text="@string/login_sign_in" />

    </RelativeLayout>

    <TextView
        android:id="@+id/login_forgot_password"
        style="@style/Custom.Text"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login_forgot_password" />

</LinearLayout>