<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_sign_up_layout_auth"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:visibility="visible">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/image_description"
        android:padding="16dp"
        android:src="@drawable/wappen_round" />

    <TextView
        style="@style/Custom.Title"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/login_set_password" />

    <TextView
        android:id="@+id/login_sign_up_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/login_email"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/background">

            <EditText
                android:id="@+id/login_sign_up_password"
                android:layout_width="358dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/login_password"
                android:importantForAutofill="no"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/login_sign_up_control_top"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/description"
            app:srcCompat="@drawable/ic_task_alt" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="358dp"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/background">

            <EditText
                android:id="@+id/login_sign_up_password_control"
                android:layout_width="358dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/login_password_control"
                android:importantForAutofill="no"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/login_sign_up_control_bottom"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/description"
            app:srcCompat="@drawable/ic_error_outline" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/login_next"
            style="@style/Custom.Button"
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/next" />

        <Button
            android:id="@+id/login_previous"
            style="@style/Custom.Button"
            android:layout_width="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/back" />
    </RelativeLayout>
</LinearLayout>