<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:visibility="visible">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/image_description"
        android:padding="16dp"
        android:src="@drawable/wappen_round" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:boxBackgroundColor="@color/background">

        <EditText
            android:id="@+id/login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/login_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:paddingBottom="10dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/login_next"
        style="@style/Custom.Button"
        android:layout_width="wrap_content"
        android:layout_gravity="end"
        android:text="@string/next" />

</LinearLayout>