<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@color/colorPrimary"
    android:foregroundGravity="bottom"
    android:gravity="start"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/nav_headder"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:contentDescription="Wappen"
        android:paddingTop="12dp"
        android:src="@drawable/wappen_2017_v2" />

    <TextView
        android:id="@+id/nav_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/frat_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/whiteish" />

    <TextView
        android:id="@+id/nav_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:text="@string/frat_address"
        android:textColor="@color/whiteish" />

    <TextView
        android:id="@+id/nav_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frat_city"
        android:textColor="@color/whiteish" />

</LinearLayout>